[gd_scene load_steps=5 format=3 uid="uid://lyxn6uge7asw"]

[ext_resource type="Theme" uid="uid://b2mckyi1bs3eo" path="res://unit drafting/Unit_Commander Draft/draft_selector_thin_border.tres" id="1_6faxh"]
[ext_resource type="Script" path="res://ui/battle_preparation/unit_detailed_info/unit_inventory_container.gd" id="2_gwuai"]
[ext_resource type="PackedScene" uid="uid://om16g0kfxkyu" path="res://ui/battle_preparation/unit_detailed_info/inventory_container_slot.tscn" id="2_odfbt"]

[sub_resource type="Theme" id="Theme_x4s2w"]
default_font_size = 12

[node name="UnitInventoryContainer" type="VBoxContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 275.0
offset_bottom = 181.0
theme = ExtResource("1_6faxh")
script = ExtResource("2_gwuai")

[node name="InventoryHeaderLabel" type="Label" parent="."]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
theme = SubResource("Theme_x4s2w")
text = "Inventory"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(275, 175)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="InventoryContainerSlot" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_odfbt")]
layout_mode = 2

[node name="InventoryContainerSlot2" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_odfbt")]
layout_mode = 2

[node name="InventoryContainerSlot3" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_odfbt")]
layout_mode = 2

[node name="InventoryContainerSlot4" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_odfbt")]
layout_mode = 2

[node name="InventoryContainerSlot5" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_odfbt")]
layout_mode = 2

[connection signal="item_selected_for_trade" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot" to="." method="_on_item_set_for_trade"]
[connection signal="set_equippped" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot" to="." method="_on_item_equipped"]
[connection signal="item_selected_for_trade" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot2" to="." method="_on_item_set_for_trade"]
[connection signal="set_equippped" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot2" to="." method="_on_item_equipped"]
[connection signal="item_selected_for_trade" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot3" to="." method="_on_item_set_for_trade"]
[connection signal="set_equippped" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot3" to="." method="_on_item_equipped"]
[connection signal="item_selected_for_trade" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot4" to="." method="_on_item_set_for_trade"]
[connection signal="set_equippped" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot4" to="." method="_on_item_equipped"]
[connection signal="item_selected_for_trade" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot5" to="." method="_on_item_set_for_trade"]
[connection signal="set_equippped" from="PanelContainer/MarginContainer/VBoxContainer/InventoryContainerSlot5" to="." method="_on_item_equipped"]
